--- a/amazon.html
+++ b/amazon.html
@@ -421,8 +421,8 @@
         </article>
     </footer>
     <script>
-        var lote1 = 'https://checkout.lastpay.com.br/l/72d4b6ee-27a9-457f-9d4c-4064e0b35d8b?_h=bGFzdHBheS5jb20uYnI=' //site do lote1
-        var lote2 = 'https://checkout.lastpay.com.br/l/2dff79cb-4391-472b-86ef-9058ee477829?_h=bGFzdHBheS5jb20uYnI=' //site do lote2
+        var lote1 = 'https://seguro.nexuscheckout.com.br/rn4RgQwxWMZwBV7' //site do lote1
+        var lote2 = 'https://seguro.nexuscheckout.com.br/VroegNwODy3Kwjd ' //site do lote2
         function produto(id){
             if(id == 1){
                 window.location.href = lote1
