--- a/amazon.html
+++ b/amazon.html
@@ -421,8 +421,8 @@
         </article>
     </footer>
     <script>
-        var lote1 = 'https://seguro.nexuscheckout.com.br/VroegNwODy3Kwjd' //site do lote1
-        var lote2 = 'https://seguro.nexuscheckout.com.br/rn4RgQwxWMZwBV7' //site do lote2
+        var lote1 = 'https://checkout.avizz.com.br/l/32dd3359-d0ea-4e0b-a83b-a4aa31d3adbb?_h=YXZpenouY29tLmJy' //site do lote1
+        var lote2 = 'https://checkout.avizz.com.br/l/3ed3fc54-102b-4663-8463-01e167245f58?_h=YXZpenouY29tLmJy' //site do lote2
         function produto(id){
             if(id == 1){
                 window.location.href = lote1
